--- a/.github/workflows/dev_cron.yml
+++ b/.github/workflows/dev_cron.yml
@@ -13,44 +13,44 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Dev PR
+# name: Dev PR
 
-on:
+# on:
 
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - synchronize
+#   pull_request_target:
+#     types:
+#       - opened
+#       - edited
+#       - synchronize
 
-jobs:
-  process:
-    name: Process
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
+# jobs:
+#   process:
+#     name: Process
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - name: Comment Issues link
-        if: |
-          github.event_name == 'pull_request_target' &&
-            (github.event.action == 'opened' ||
-             github.event.action == 'edited')
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const script = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/dev_cron/issues_link.js`);
-            script({github, context});
+#       - name: Comment Issues link
+#         if: |
+#           github.event_name == 'pull_request_target' &&
+#             (github.event.action == 'opened' ||
+#              github.event.action == 'edited')
+#         uses: actions/github-script@v3
+#         with:
+#           github-token: ${{ secrets.GITHUB_TOKEN }}
+#           script: |
+#             const script = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/dev_cron/issues_link.js`);
+#             script({github, context});
 
-      - name: Check title
-        if: |
-          github.event_name == 'pull_request_target' &&
-            (github.event.action == 'opened' ||
-             github.event.action == 'edited')
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const script = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/dev_cron/title_check.js`);
-            script({github, context});
+#       - name: Check title
+#         if: |
+#           github.event_name == 'pull_request_target' &&
+#             (github.event.action == 'opened' ||
+#              github.event.action == 'edited')
+#         uses: actions/github-script@v3
+#         with:
+#           github-token: ${{ secrets.GITHUB_TOKEN }}
+#           script: |
+#             const script = require(`${process.env.GITHUB_WORKSPACE}/.github/workflows/dev_cron/title_check.js`);
+#             script({github, context});
 
