--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,23 +13,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 'Close stale PRs'
-on:
-  schedule:
-    - cron: '30 1 * * *'
+# name: 'Close stale PRs'
+# on:
+#   schedule:
+#     - cron: '30 1 * * *'
 
-jobs:
-  stale:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/stale@v8
-        with:
-          days-before-pr-stale: 45
-          days-before-pr-close: 10
-          stale-pr-message: 'This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 10 days.'
-          close-pr-message: 'This PR was auto-closed because it has been stalled for 10 days with no activity. Please feel free to reopen if it is still valid. Thanks.'
-          days-before-issue-stale: -1 # disabled
-          days-before-issue-close: -1 # disabled
-          stale-issue-message: 'This issue is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 10 days.'
-          close-issue-message: 'This issue was auto-closed because it has been stalled for 10 days with no activity. Please feel free to reopen if it is still valid. Thanks.'
-          operations-per-run: 300
+# jobs:
+#   stale:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/stale@v8
+#         with:
+#           days-before-pr-stale: 45
+#           days-before-pr-close: 10
+#           stale-pr-message: 'This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 10 days.'
+#           close-pr-message: 'This PR was auto-closed because it has been stalled for 10 days with no activity. Please feel free to reopen if it is still valid. Thanks.'
+#           days-before-issue-stale: -1 # disabled
+#           days-before-issue-close: -1 # disabled
+#           stale-issue-message: 'This issue is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 10 days.'
+#           close-issue-message: 'This issue was auto-closed because it has been stalled for 10 days with no activity. Please feel free to reopen if it is still valid. Thanks.'
+#           operations-per-run: 300
