--- a/.github/workflows/velox_tpch_bench.yml
+++ b/.github/workflows/velox_tpch_bench.yml
@@ -13,30 +13,30 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Velox backend Performance Tests On Comments
+# name: Velox backend Performance Tests On Comments
 
-on:
-  issue_comment:
-    types: [created, edited, deleted]
+# on:
+#   issue_comment:
+#     types: [created, edited, deleted]
 
-env:
-  JENKINS_HOST: 10.0.0.68
-  JENKINS_PORT: 8080
-  JENKINS_USER: jenkins:11fd1b5a82bfd638bd9b3749c96b324ff2
+# env:
+#   JENKINS_HOST: 10.0.0.68
+#   JENKINS_PORT: 8080
+#   JENKINS_USER: jenkins:11fd1b5a82bfd638bd9b3749c96b324ff2
 
-jobs:
-  velox-trigger-benchmark-on-comment:
-    # check the comment if it contains the keywords
-    if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '/Benchmark Velox') }}
-    runs-on: velox-self-hosted
-    container: ubuntu:22.04
-    steps:
-      - uses: actions/checkout@v4
-      - run: apt-get update && apt-get install ca-certificates -y && update-ca-certificates
-      - run: sed -i 's/http\:\/\/archive.ubuntu.com/https\:\/\/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
-      - run: apt-get update
-      - run: apt-get install -y curl
-      - name: trigger_tpch_bench
-        run: |
-          branchname=origin/pr/${{ github.event.issue.number }}/head
-          curl --noproxy $JENKINS_HOST -L -X POST http://$JENKINS_HOST:$JENKINS_PORT/job/Gluten_Perf_Github_Action_Check/build --user $JENKINS_USER --data-urlencode json='{"parameter": [{"name":"sha1", "value":"'$branchname'"}]}'
+# jobs:
+#   velox-trigger-benchmark-on-comment:
+#     # check the comment if it contains the keywords
+#     if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '/Benchmark Velox') }}
+#     runs-on: velox-self-hosted
+#     container: ubuntu:22.04
+#     steps:
+#       - uses: actions/checkout@v4
+#       - run: apt-get update && apt-get install ca-certificates -y && update-ca-certificates
+#       - run: sed -i 's/http\:\/\/archive.ubuntu.com/https\:\/\/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
+#       - run: apt-get update
+#       - run: apt-get install -y curl
+#       - name: trigger_tpch_bench
+#         run: |
+#           branchname=origin/pr/${{ github.event.issue.number }}/head
+#           curl --noproxy $JENKINS_HOST -L -X POST http://$JENKINS_HOST:$JENKINS_PORT/job/Gluten_Perf_Github_Action_Check/build --user $JENKINS_USER --data-urlencode json='{"parameter": [{"name":"sha1", "value":"'$branchname'"}]}'
